# neighbourhood-safety-prediction

./: .env.example  .gitignore  EDA_agg.ipynb  README.md  assumptions_ru.md  docker-compose.yaml  ml_system_design_doc.md  ml_system_design_doc_EN.md  pyproject.toml  requirements.txt
.github/workflows/: pylinter.yml
additional-materials/1-how-to-work-with-git/: README.md
app/loader/: loader.py
app/streamlit-app/: london-map-folium.py  london-map.py  prophet-day-prediction.py
data/MPS/: Bor_cen_01_11_21_population.csv  Borough_age_cen21_population.csv  MPS Borough Level Crime (Historical).csv  MPS Borough Level Crime (including last month).csv  MPS Borough Level Crime (most recent 24 months).csv  Mapping_data.csv  london-borough-profiles.csv  london_tourist_attractions.csv  population_area.csv  wide_nomis.csv  (+2 more)
designdoc/: ml_system_design_doc.md
models/: dummy_prophet_model_01.joblib
notebooks/: 1. Roman. First glance.ipynb  Data_exploration.ipynb  Data_exploration_borough.ipynb  EDA_2_yulia.ipynb  EDA_3_yulia.ipynb  EDA_agg.ipynb  alex_1_use_force.ipynb  alex_2_prophet_UF_model.ipynb  alex_3_UF_ExpSm_Xgboost.ipynb  alex_3_UF_ExpSm_vs_prophet.ipynb  alex_5_neighbourhood_examples.ipynb  alex_6_examples_safety_levels.ipynb  alex_use_force.ipynb  latest_report.html  roman_2.5_ml flow lab.ipynb  roman_2_dummy model.ipynb  roman_3_model_exponential.ipynb  roman_3_model_rf.ipynb  roman_4_model_regression.ipynb  your_report.html
references/: assumptions_en.md
service/: london-map-folium.py  london-map.py  prophet-day-prediction.py
tests/: test_utils_metrics.py
(+14 files in other folders)
